--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -16,15 +16,16 @@
 .top-nav .btn-application{position:absolute;top:6px;right:0; width:160px;height:42px;line-height:42px;border-radius:21px;color:#fff;font-size:16px;font-weight:700;background:#4fd69e;text-align: center;}
 .top-nav .btn-application:hover{opacity: 0.8;}
 .top-nav.on header{background:rgba(255,255,255,1);}
-.container{padding-bottom:130px;}
-.container .btn-wrap{margin-top:60px;}
-.container .btn-wrap .btn-application{display:block;width:100%;height:42px;line-height:42px;font-size:16px; color:#fff; background: #4fd69e;border-radius:21px;text-align: center;}
-.container .btn-wrap .btn-share{display:block;margin:13px auto 0; font-size:16px;font-weight:700;position:relative;padding-right:20px;background: url(../images/ico_share.png) 100% 52% no-repeat;background-size: 14px 15px;color:#000;}
+.container{padding-bottom:50px;}
+.container .btn-wrap{margin-top:100px;}
+.container .btn-wrap .btn-application{display:block;width:100%;height:65px;line-height:65px;font-size:2.0rem;font-weight:700;color:#fff; background: #4fd69e;border-radius:32.5px;text-align: center;}
+.container .btn-wrap .btn-share{display:block;width:100%;height:65px;line-height:65px;margin:18px 0 0 0;background:#dbdbdb;border-radius:32.5px;}
+.container .btn-wrap .btn-share span{font-size:20px;font-weight:400;color:#000;position:relative;padding-right:20px;background: url(../images/ico_share.png) 100% 53% no-repeat;background-size: 14px 15px;color:#000;}
 .inner{position:relative;max-width:820px;margin:0 auto;}
 .container .btn-wrap > *:hover{opacity: 0.8;}
 
 .cont.info{margin-top:60px;}
-.cont .cont-title{font-size:2.0rem;margin-top:45px;font-weight:700;}
+.cont .cont-title{font-size:2.0rem;margin-top:80px;font-weight:700;}
 
 .main-visual{position:relative;padding-top:68px;max-width:820px;margin:0 auto;transition: 0.3s;}
 .main-visual .img-title{width:490px;height:220px; position:relative;}
@@ -34,9 +35,9 @@
 .main-visual .counter .title{position:absolute;top:-15px;left:50%;transform: translateX(-50%); width:212px;height:31px;line-height:31px; background:#21bbff;color:#fff;font-size:18px;font-weight:700;text-align: center;border-radius: 15px;letter-spacing: -1px;}
 .main-visual .lg-info{position:relative;margin-top:50px;}
 .main-visual .lg-info .title{color:#00bc77;font-size:16px;font-weight:700;background:#fff;}
-.main-visual .lg-info .title span{width:90px;display:inline-block; background:#fff;font-weight:700;}
+.main-visual .lg-info .title span{width:90px;display:inline-block; background:#fff;font-weight:700;font-size:1.6rem;}
 .main-visual .lg-info .title::before{content:"";position:absolute;width:calc(100% - 90px);height:4px;top:8px;right:0;background:#54ddab;}
-.main-visual .lg-info .text{margin-top:5px;}
+.main-visual .lg-info .text{margin-top:5px;font-size:1.4rem;}
 .main-visual .info-box{padding:24px 25px;background:#f7f7f7;margin-top:50px;}
 .main-visual .info-box .info-box-item{display: flex;align-items: center;margin-top:15px;}
 .main-visual .info-box .info-box-item:first-child{margin-top:0;}
@@ -45,8 +46,9 @@
 .main-visual .info-box dt{color:#333;font-size:16px;font-weight:700;}
 .main-visual .info-box dd{color:#555;font-size:14px;font-weight:400;}
 .main-visual .btn-wrap{display: flex;align-items: center;justify-content: center;margin-top:34px;}
-.main-visual .btn-wrap .btn{flex:0 auto;min-width:250px;margin-left:12px;color:#fff;font-size:20px;font-weight:700;height:65px;line-height:65px;text-align: center;border-radius:32.5px;}
+.main-visual .btn-wrap .btn{flex:0 33.3%;display: flex;align-items: center;justify-content: center;padding:20px 40px;margin-left:20px;border-radius:45px;}
 .main-visual .btn-wrap .btn:first-child{margin-left:0;}
+.main-visual .btn-wrap .btn span{position:relative;text-align: center; color:#fff;font-size:20px;font-weight:700;letter-spacing: -0.5px;}
 .main-visual .img{position:absolute;background: url(../images/img_01.png);background-repeat:no-repeat;background-size:100%;transition: 0.3s;}
 .main-visual .img.n1{background-image:url(../images/img_01.png); top:-60px;right:0;width:339px;height:429px;}
 .main-visual .img.n2{background-image:url(../images/img_02.png); top:153px;left:-300px;width:110px;height:50px;}
@@ -58,17 +60,18 @@
 .main-visual .img.n8{background-image:url(../images/img_08.png); bottom:52px;right:0;width:30px;height:22px;}
 
 .btn-wrap .btn:hover{opacity: 0.8;}
-.btn-wrap .btn.color01{background: #4fd69e;}
-.btn-wrap .btn.color02{background: #af8be0;}
+.btn-wrap .btn.color01{background-color: #4fd69e;}
+.btn-wrap .btn.color02{background-color: #af8be0;}
 
 /* tab  */
-.tab-wrap{margin-top:25px;}
-.tab-menu{display:flex;align-items: center;margin:0 -6px;}
-.tab-menu .tab-btn{position:relative;margin:0 6px;font-size:2.0rem;;letter-spacing: -0.5px;transition: 0.3s;line-height: 1.4;color:#000;}
+.tab-wrap{margin-top:23px;}
+.tab-menu{display:flex;align-items: center;margin:0 -15px;}
+.tab-menu .tab-btn{position:relative;margin:0 15px;font-size:2.0rem;;letter-spacing: -0.5px;transition: 0.3s;line-height: 1.4;color:#000;}
 .tab-menu .tab-btn:hover{opacity: 0.8;}
 .tab-menu .tab-btn.on{font-weight:700;}
 .tab-menu .tab-btn.on::after{content:'';position:absolute;bottom:2px;left:0;width:100%;height:8px;;background: #ffcf8e;z-index:-1;}
-.tab-menu.depth2 .tab-btn{background:#f0f0f0;font-size:1.4rem;color:#666;font-weight:400;line-height: 16px;padding:8px 16px;border-radius:17px;letter-spacing: -0.35px;}
+.tab-menu.depth2{margin:0 -4px;}
+.tab-menu.depth2 .tab-btn{background:#f0f0f0;font-size:1.4rem;color:#666;font-weight:400;line-height: 16px;padding:8px 16px;border-radius:17px;letter-spacing: -0.35px;margin:0 4px;}
 .tab-menu.depth2 .tab-btn:after{display:none;}
 .tab-menu.depth2 .tab-btn.on{background:#000;color:#fff;font-weight: 700;}
 .tab-conts .tab-cont{display:none;}
@@ -77,12 +80,12 @@
 .tab-wrap .acco-wrap{margin-top:23px;}
 .faq .acco-wrap{margin-top:17px;}
 .acco-wrap{position:relative;border:1px solid #e0e0e0;border-lefT:0;border-right:0;}
-.acco-wrap .acoo-btn{position:relative;width:100%;text-align: left; padding:15px 30px 15px 0;font-size:1.4rem;line-height:22px;border-top:1px solid #e0e0e0;white-space: inherit;color:#000;}
-.acco-wrap .acoo-btn span{color:#000;}
+.acco-wrap .acoo-btn{position:relative;width:100%;text-align: left; padding:15px 30px 15px 0;border-top:1px solid #e0e0e0;white-space: inherit;color:#000;}
+.acco-wrap .acoo-btn span{color:#000;font-size:1.6rem;line-height:22px;}
 .acco-wrap .acoo-btn:first-child{border-top:0;}
 .acco-wrap .acoo-btn:after{content:'';position: absolute;top:24px;right:7px;width:12px;height:7px;background: url(../images/icon_acoo_arrow.png) 0 0 no-repeat;background-size:100%;transition: 0.3s;}
-.acco-wrap .acco-cont{display:none;background:#f7f7f7;padding:18px 23px;}
-.acco-wrap .acco-cont .tit{font-size:1.3rem;line-height:22px;font-weight:700;margin-top:12px;}
+.acco-wrap .acco-cont{display:none;background:#f7f7f7;padding:34px 23px;}
+.acco-wrap .acco-cont .tit{font-size:1.3rem;line-height:22px;font-weight:700;margin-top:24px;}
 .acco-wrap .acco-cont .tit:first-child{margin-top:0;}
 .acco-wrap .acco-cont .txt-list{margin-top:5px;color:#444}
 .acco-wrap .acco-cont .txt-list li{position:relative; color:#333;font-size:1.3rem;line-height:22px;font-weight:400;margin-top:3px;padding-left:10px;}
@@ -94,7 +97,7 @@
 .video-wrap{display: flex;flex-wrap:wrap;margin:-5px -10px 0;}
 .video-wrap .video-box{height:220px;}
 .video-wrap .video-item{width:calc(50% - 20px);margin:20px 10px 0;}
-.video-wrap .video-item .tit{font-size:1.6rem;font-weight:700;color:#333;margin-top:15px;}
+.video-wrap .video-item .tit{font-size:1.6rem;font-weight:700;color:#333;margin-top:17px;}
 .video-wrap .video-item .txt{font-size:1.4rem;font-weight:400;color:#666;margin-top:3px;}
 
 .dim{position:fixed;width:100%;height:100%;background: rgba(0,0,0,0.6);z-index: 100;opacity:0;transition: 0.3s;}
@@ -113,7 +116,7 @@
 .modal .modal-cont .scorll-wrap::-webkit-scrollbar-track {background-color: transparent; border-radius: 10px;}
 
 @media screen and (max-width: 850px) {
-  .container{padding-bottom:80px;}
+  .container{padding-bottom:130px;}
   .inner{position:relative;max-width:820px;margin:0 auto; padding:0 24px;}
 	.top-nav .btn-application{display:none;}
 	.top-nav .inner{width:100%;height: 55px;}
@@ -129,25 +132,27 @@
   .main-visual .img-title{width:50%;height:auto}
   .main-visual .img.n1{width:250px;height:304px;right:68px;z-index:-1;}
   .main-visual .img.n2{top:63px;left:-30px;}
-  .main-visual .img.n4{left:10px;top:51%;}
-  .main-visual .img.n5{left: -30px;top:46%;}
+  .main-visual .img.n4{left:10px;top:44%;}
+  .main-visual .img.n5{left:-30px;top:41%;}
   .main-visual .img.n6{top:30px;right:7%;}
   .main-visual .img.n7{top:46px;right:2%;}
   .main-visual .img.n8{bottom:25%;}
-  .main-visual .img-text{font-size:16px;min-width:240px;margin-top:5px;width:80%;}
+  .main-visual .img-text{font-size:16px;min-width:240px;margin-top:8px;width:80%;}
 
   .main-visual .counter{margin-top:40px;width:100%;height:96px;}
   .main-visual .counter .title{font-size:14px;border-radius:12px;width:164px;height:24px;line-height:24px;}
   .main-visual .lg-info .title span{font-size:16px;}
   .main-visual .lg-info .text{font-size:14px;color:#666;line-height:22px;font-weight:400;}
 
-  .main-visual .info-box{margin-top:40px;}
+  .main-visual .info-box{margin-top:45px;padding:18px 20px;}
   .main-visual .info-box .info-box-item{display: block;}
   .main-visual .info-box dt{font-weight:500;}
   .main-visual .info-box .info-box-item dd{margin:2px 0 0 0;word-break: keep-all;color:#666;line-height:22px}
 
-  .main-visual .btn-wrap{margin-top:20px;}
-  .main-visual .btn-wrap .btn{min-width:auto;padding:0 15px; height:42px;line-height:42px;font-size:14px;letter-spacing:-0.5px}
+  .main-visual .btn-wrap{flex-wrap:wrap;margin-top:20px;}
+  .main-visual .btn-wrap .btn{flex:0 100%;margin:8px 0 0 0; min-width:auto;padding:15px;}
+  .main-visual .btn-wrap .btn span{position:relative;font-size:1.6rem;letter-spacing:-0.4px;background:url(../images/btn_icon_01.png) 100% 2px no-repeat;background-size:20px;padding-right:24px;}
+  
   
   .tab-menu{flex-wrap:wrap;}
   .tab-menu.depth2{margin:-8px -4px 0;}
@@ -155,14 +160,21 @@
 
   .video-wrap .video-item{width:100%;}
   .video-wrap .video-item .tit{margin-top:18px;}
+  .tab-wrap .acco-wrap{margin-top:20px;}
+  .acco-wrap .acco-cont{padding:30px 20px;}
+
+  .container .btn-wrap{margin-top:60px;}
+  .container .btn-wrap .btn-application{height:50px;line-height: 50px;font-size:1.6rem}
+  .container .btn-wrap .btn-share{height: 50px;line-height: 50px;margin-top:10px;}
+  .container .btn-wrap .btn-share span{font-size:1.6rem;}
 }
 
 @media screen and (max-width: 750px) {
   .modal{top:0;left:0; width:100%;height: 100%;transform: translate(0, 0);padding:0 24px 90px;}
   .modal .modal-cont{height:100%;}
-  .modal .modal-cont .scorll-wrap{height:calc(100% - 56px)}
+  .modal .modal-cont .scorll-wrap{height:calc(100% - 63px)}
   .modal .btn-wrap{width:calc(100% - 48px);bottom:24px;}
-  .modal .btn-wrap .btn{width:100%;height:4.3rem;line-height:4.3rem;;}
+  .modal .btn-wrap .btn{width:100%;height:5.0rem;line-height:5.0rem;;}
 
     
 }
@@ -171,8 +183,8 @@
   .main-visual .img.n1{width:210px;height:254px;right:68px;}
   .main-visual .img-title{width:80%;}
   .main-visual .img-text{width:50%}
-  .main-visual .img.n4{top: 54%;}
-  .main-visual .img.n5{top: 50%;}
+  .main-visual .img.n4{top: 48%;}
+  .main-visual .img.n5{top: 45%;}
   .main-visual .img.n6{right:40px;}
   .main-visual .img.n7{right:0;}
   .main-visual .btn-wrap {flex-wrap:wrap;}
@@ -180,14 +192,17 @@
   .main-visual .btn-wrap .btn:first-child{margin-top:0;}
 }
 @media screen and (max-width: 500px) {
+  .cont.info{margin-top:0;}
+  .cont .cont-title{margin-top:44px;}
   .main-visual{padding:150px 24px 0;}
   .main-visual .img.n1{width:190px;height:234px;right:68px;}
+  .main-visual .btn-wrap .btn{justify-content: flex-start;padding:15px 27px;}
 }
 @media screen and (max-width: 400px) {
   .main-visual{padding:160px 24px 0;}
   .main-visual .img.n1{width:190px;height:234px;right:68px;}
-  .main-visual .img.n4{top: 51%;}
-  .main-visual .img.n5{top: 47%;}
+  .main-visual .img.n4{top: 45%;}
+  .main-visual .img.n5{top: 41%;}
 }
 
 
